<resources>
    <string name="app_name">Happy Weather</string>
    <string name="splash_title">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="alreadyRegistered">Already registered? \n Login here</string>
    <string name="notRegisteredYet">"Don't have an account yet? \n Register here</string>
    <string name="email">Email</string>
    <string name="fullName">Full Name</string>
    <string name="password">Password</string>
    <string name="registerAndLogin">Register and Login</string>
    <string name="wellcome">Hello</string>
    <string name="sendMail">Send Email</string>
    <string name="call">Call</string>
    <string name="openBrowser">Open Browser</string>
    <string name="showUsers">Show Users</string>
    <string name="nameApp">Happy Weather</string>
    <string name="username">Username</string>
    <string name="cantLogin">Incorrect password or username</string>
    <string name="metric">Metric</string>
    <string name="standard">Standard</string>
    <string name="units">Units</string>
    <string name="empty">Null</string>
    <!--DRAWER MENU-->
    <string name="itemHelpTitle">Something to say?</string>
    <string name="menuItemWeather">Weather</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemHelp">Help</string>
    <string name="menuItemLogOut">LogOut</string>
    <string name="menuItemHome">Home</string>
    <string name="navigation_drow_open">Open navigation drawer</string>
    <string name="navigation_drow_close">Close navigation drawer</string>
    <!--Detalles del clima actual-->
    <string name="humidity">Humidity \n %1$s %%</string>
    <string name="pressure">Pressure \n %1$s Hpa</string>
    <string name="riskOfRain">Risk Of Rain \n %1$s %%</string>
    <string name="rain">Rain \n %1$s cm</string>
    <string name="apparentTemperature">Appar. Temp. \n %1$s</string>
    <string name="wind">Wind \n %1$s </string>
    <string name="visibility">Visibility \n %1$s </string>
    <!--Email-->
    <string name="email_subject">Something went wrong</string>
    <string name="email_chooser">Send email using &#8230;</string>
    <string name ="desc">desc</string>
    <!--DAYS OF THE WEEK-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday </string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- WEATHER -->
    <string name="sunny">Clear</string>
    <string name="drizzle">Drizzle</string>
    <string name="cloudy">Clouds</string>
    <string name="snowy">Snow</string>
    <string name="rainny">Rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <!--NOTIFICATION-->
    <string name="notification_message">Hi %1$s!.\n Now: %2$s, Max: %3$s</string>
    <string name="notification_switch">Notifications</string>
    <string name="facebook_app_id">2176817095957935</string>
    <string name="fb_login_protocol_scheme">fb2176817095957935</string>

</resources>
