<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_iconfinder_map"
            android:title="@string/menuItemHome"
            />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_iconfinder_weather"
            android:title="@string/menuItemWeather"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menuItemSettings" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_iconfinder_logout"
        android:title="@string/menuItemLogOut" />
    <item android:title="@string/itemHelpTitle">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menuItemHelp" />
        </menu>
    </item>
</menu>