<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    >

    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTopRegister"
        android:layout_weight="0.2"
        android:text="@string/login"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTopText"
        android:layout_weight="0.09"
        android:text="@string/username" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:drawableStart="@drawable/ic_account_circle_black_18dp"
        android:drawableLeft="@drawable/ic_account_circle_black_18dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_weight="0.09"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:drawableStart="@drawable/ic_lock_black_18dp"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:drawableEnd="@drawable/ic_arrow_forward_black_18dp"
        android:drawableRight="@drawable/ic_arrow_forward_black_18dp"


        android:text="@string/login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/lnkRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopLeyend"
        android:layout_weight="0.09"
        android:gravity="bottom|center"

        android:text="@string/notRegisteredYet"
        android:textColor="#3F51B5"
        android:textSize="20dp" />


</LinearLayout>