<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.SettingsFragment"
    android:background="@android:color/darker_gray"
    >
    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_edit_24px"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="vertical"
        android:layout_below="@+id/editButton"
        >
        <ImageButton
            android:id="@+id/picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:clickable="false"
            />
        <TextView
            android:id="@+id/fstTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTopText"
            android:text="@string/fullName"
            android:layout_weight="0.085"/>
        <EditText
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:layout_weight="0.085"
            android:ems="10"
            android:enabled="false"/>
        <TextView
            android:id="@+id/secTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="0.085"
            android:layout_marginLeft="@dimen/marginLeft" />
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:layout_weight="0.085"
            android:ems="10" />
        <TextView
            android:id="@+id/thirdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="0.085"
            android:layout_marginLeft="@dimen/marginLeft" />
        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:enabled="false"
            android:layout_weight="0.085"
            android:ems="10" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.085"
            android:visibility="invisible"
            android:text="Save" />

    </LinearLayout>


</RelativeLayout>
